<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FC150D32"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/bt_signin"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginTop="516dp"
        android:background="@drawable/oval_button_background"
        android:backgroundTint="#FA5C92"
        android:text="@string/registrarse"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/im_logo"
        android:layout_width="146dp"
        android:layout_height="146dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        android:src="@drawable/dise_o_sin_t_tulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/white"
        app:strokeWidth="0dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="356dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#BAB9B9"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="436dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#BAB9B9"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginTop="276dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#BAB9B9"
        android:textColorLink="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>